--- a/RestTecClient/src/app/pages/login/login.component.html
+++ b/RestTecClient/src/app/pages/login/login.component.html
@@ -15,7 +15,7 @@
                 <label>Password</label>
                 <input type="password" class="form-control" placeholder="Password">
              </div>
-             <button type="submit" class="btn btn-black">Login</button>
+             <button (click)="assigned()" class="btn btn-black">Login</button>
              <button type="submit" class="btn btn-secondary">Register</button>
           </form>
        </div>
