--- a/RestTecClient/src/app/pages/login/login.component.html
+++ b/RestTecClient/src/app/pages/login/login.component.html
@@ -9,13 +9,13 @@
           <form>
              <div class="form-group">
                 <label>User Name</label>
-                <input type="text" class="form-control" placeholder="User Name">
+                <input type="text" class="form-control" placeholder="User Name" #user>
              </div>
              <div class="form-group">
                 <label>Password</label>
                 <input type="password" class="form-control" placeholder="Password">
              </div>
-             <button (click)="assigned()" class="btn btn-black">Login</button>
+             <button (click)="confirmuser(user.value)" class="btn btn-black">Login</button>
              <button type="submit" class="btn btn-secondary">Register</button>
           </form>
        </div>
